--- a/landing-page.html
+++ b/landing-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id" class="scroll-smooth">
+<html lang="id" class="scroll-smooth overflow-x-hidden">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
       "name": "PDF Kit",
-      "operatingSystem": "Windows 10, Windows 11",
+      "operatingSystem": "Windows 11",
       "applicationCategory": "ProductivityApplication",
       "offers": {
         "@type": "Offer",
@@ -193,8 +193,8 @@
                 </a>
             </div>
             <p class="mt-4 text-sm text-gray-500" data-aos="fade-up" data-aos-delay="300">
-                <span data-lang="id">Gratis & Open Source • Windows 10/11 • v1.0.14</span>
-                <span data-lang="en" class="lang-hidden">Free & Open Source • Windows 10/11 • v1.0.14</span>
+                <span data-lang="id">Gratis & Open Source • Windows 11 • v1.0.14</span>
+                <span data-lang="en" class="lang-hidden">Free & Open Source • Windows 11 • v1.0.14</span>
             </p>
 
             <!-- App Screenshots -->
@@ -347,7 +347,7 @@
     </div>
 
     <!-- Privacy/Offline Section -->
-    <div id="privacy" class="bg-gray-900 text-white py-24">
+    <div id="privacy" class="bg-gray-900 text-white py-24 overflow-hidden">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="lg:grid lg:grid-cols-2 lg:gap-16 items-center">
                 <div data-aos="fade-right" data-aos-duration="1000">
@@ -404,8 +404,8 @@
                 <span data-lang="en" class="lang-hidden">Download PDF Kit Now (Free)</span>
             </a>
             <p class="mt-4 text-brand-100 text-sm">
-                <span data-lang="id">Membutuhkan Windows 10 atau lebih tinggi</span>
-                <span data-lang="en" class="lang-hidden">Requires Windows 10 or higher</span>
+                <span data-lang="id">Membutuhkan Windows 11 atau lebih tinggi</span>
+                <span data-lang="en" class="lang-hidden">Requires Windows 11 or higher</span>
             </p>
         </div>
     </div>
